Personalize pyproject authors and mkdocs site settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ build-backend = "setuptools.build_meta"
 requires = ["setuptools>=80", "wheel"]
 
 [project]
-authors = [{name = "Denise Case"}] # TODO: Change to YOUR name (ownership matters)
+authors = [{name = "Karli Dean"}]
 classifiers = [
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.12",
 ]
-description = "Professional Python starter project using uv and a src layout"
+description = "Professional Python Project, AML Midterm"
 license = "MIT"
 name = "analytics-project" # PACKAGE name (matches src folder except with dashes)
 readme = "README.md"
@@ -31,10 +31,10 @@ dependencies = [ # fmt: off
 ]  # fmt: on
 
 [project.urls]
-"Bug Tracker" = "https://github.com/denisecase/pro-analytics-02-starter/issues"
-Documentation = "https://denisecase.github.io/pro-analytics-02-starter/"
-Homepage = "https://github.com/denisecase/pro-analytics-02-starter"
-Repository = "https://github.com/denisecase/pro-analytics-02-starter"
+"Bug Tracker" = "https://github.com/karlidean/ml-classification-karlidean/issues"
+Documentation = "https://karlidean.github.io/ml-classification-karlidean/"
+Homepage = "https://github.com/karlidean/ml-classification-karlidean/"
+Repository = "https://github.com/karlidean/ml-classification-karlidean"
 
 [project.optional-dependencies]
 dev = [
