--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,13 @@ requires-python = ">=3.12"
 version = "0.0.1"
 
 dependencies = [ # fmt: off
-  "loguru",      # Better than print() - practice production logging with levels
-  "matplotlib",  # Industry standard plotting
-  "pandas",      # THE data manipulation tool in analytics
-  "seaborn",     # Statistical charts built on matplotlib
-  "ipython",     # Enhanced Python shell (needed for notebooks)
-  "ipykernel",   # Jupyter kernel for notebooks
+  "loguru", # Better than print() - practice production logging with levels
+  "matplotlib", # Industry standard plotting
+  "pandas", # THE data manipulation tool in analytics
+  "seaborn", # Statistical charts built on matplotlib
+  "ipython", # Enhanced Python shell (needed for notebooks)
+  "ipykernel", # Jupyter kernel for notebooks
+  "ucimlrepo>=0.0.7",
 ]  # fmt: on
 
 [project.urls]
