--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [ # fmt: off
   "ipython", # Enhanced Python shell (needed for notebooks)
   "ipykernel", # Jupyter kernel for notebooks
   "ucimlrepo>=0.0.7",
+  "scikit-learn>=1.7.2",
 ]  # fmt: on
 
 [project.urls]
